--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,6 +48,7 @@ ul, li {
 
 .nav-item {
     margin-right: 1rem;
+    margin-left: 1rem;
 }
 
 .bx-log-out {
@@ -116,6 +117,19 @@ ul, li {
     background-color: var(--hover-color);
 } */
 
+ .post-link .actions {
+    text-decoration: underline;
+    font-weight: 500;
+ }
+
+ .del-action {
+    color: rgb(161, 0, 0);
+ }
+
+.edit-action {
+    color: rgb(0, 18, 157);
+ }
+
 .post-btns i {
     /* color: var(--body-color); */
     font-size: 25px;
@@ -175,16 +189,27 @@ ul, li {
 
 
 /* Comments */
-.comments {
-    width: 50rem;
+.comment-card .comment-owner {
+    font-size: 20px;
+    font-weight: 700;
+    color: var(--primary-color);
+}
+
+.comment-card .comment-time {
+    font-size: 17px;
+    font-weight: 600;
+    color: #5f5f5f;
 }
 
 .comment-card {
-    border: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
     padding: 10px;
-    border-radius: 5px;
 }
 
 .comments .comment-index {
     width: 100%;
+}
+
+.comment-header {
+    margin-left: 0.5rem;
 }
